# RPG

./: .gitignore  CMakeLists.txt  Convert.cpp  Escaper.cpp  IndentCanceller.cpp  Indenter.cpp  JsonParsingError.cpp  JsonWritingError.cpp  SolidusEscaper.cpp  Value.cpp  area.cpp  area.h  areas.json  armour.cpp  armour.h  armour.json  battle.cpp  battle.h  creature.cpp  creature.h  dialogue.h  door.cpp  door.h  doors.json  entity.h  entityManager.cpp  entityManager.h  inventory.cpp  inventory.h  item.cpp  item.h  main.cpp  player.cpp  player.h  weapon.cpp  weapon.h  weapons.json
